--- a/src/learn/CMakeLists.txt
+++ b/src/learn/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_executable(learn learn.cpp)
+file(GLOB learn_include "*.h")
+file(GLOB learn_src "*.cpp")
+add_executable(learn ${learn_include} ${learn_src})
+target_link_libraries(learn ${Boost_LIBRARIES})
