--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ ADD_DEFINITIONS(
 )
 
 # Dependencies
-find_package(Boost REQUIRED program_options)
+find_package(Boost REQUIRED program_options system)
 if(NOT Boost_FOUND)
  message(FATAL_ERROR "Could not find any version of boost")
 endif(NOT Boost_FOUND)
