--- a/src/learn/CMakeLists.txt
+++ b/src/learn/CMakeLists.txt
@@ -1,4 +1,4 @@
 file(GLOB learn_include "*.h")
 file(GLOB learn_src "*.cpp")
 add_executable(learn ${learn_include} ${learn_src})
-target_link_libraries(learn ${Boost_LIBRARIES})
+target_link_libraries(learn common ${Boost_LIBRARIES})
