--- a/src/generate/CMakeLists.txt
+++ b/src/generate/CMakeLists.txt
@@ -1,3 +1,4 @@
 file(GLOB generate_include "*.h")
 file(GLOB generate_src "*.cpp")
-add_library(generate ${generate_include} ${generate_src})
+add_executable(generate ${generate_include} ${generate_src})
+target_link_libraries(generate common ${Boost_LIBRARIES})
